--- a/src/main/resources/paper-plugin.yml
+++ b/src/main/resources/paper-plugin.yml
@@ -1,5 +1,6 @@
 name: mq_fv
-version: '0.1.2'
+version: '0.1.3'
 main: fr.fv.mq_fv.Mq_fv
-api-version: '1.21'
+api-version: '1.20'
 load: STARTUP
+depend: [ProtocolLib]
